update css styles

--- a/_notebooks/2020-06-20-guide-to-numpy.ipynb
+++ b/_notebooks/2020-06-20-guide-to-numpy.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Guide to NumPy For Scientific Computing\n",
-    "> This blog is a Numpy guide for anyone looking to get deeper understanding along with exercises\n",
+    "> In this blog we will dive deeper in understanding the working of numpy along with exercises.\n",
     "\n",
-    "- toc: true \n",
+    "- toc: true\n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [python, numpy]\n",
-    "- image: images/guide-to-numpy-banner.png"
+    "- image: images/guide-to-numpy-banner.png\n"
    ]
   },
   {
@@ -2188,7 +2188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a 2D array with 1 on the border and 0 inside\n"
+    "Create a 2D array with 1 on the border and 0 inside.\n"
    ]
   },
   {
@@ -2210,7 +2210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Normalize a 5 x 5 random matrix\n"
+    "Normalize a 5 x 5 random matrix.\n"
    ]
   },
   {
@@ -2229,7 +2229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Given a 1D array, negate all elements which are between 3 and 8 inclusive, in place\n"
+    "Given a 1D array, negate all elements which are between 3 and 8 inclusive, in place.\n"
    ]
   },
   {
@@ -2247,7 +2247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. How to get the alternates dates corresponding to the month of July 2016?\n"
+    "How to get the alternates dates corresponding to the month of July 2016?\n"
    ]
   },
   {
@@ -2263,7 +2263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Create a vector of size 10 with values ranging from 0 to 1, both excluded\n"
+    "Create a vector of size 10 with values ranging from 0 to 1, both excluded.\n"
    ]
   },
   {
@@ -2282,7 +2282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. How to sort an array by the nth column?\n"
+    "How to sort an array by the nth column?\n"
    ]
   },
   {
@@ -2300,7 +2300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Find the nearest value from a given value in an array\n"
+    "Find the nearest value from a given value in an array.\n"
    ]
   },
   {
@@ -2318,7 +2318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. How to accumulate elements of a vector (X) to an array (F) based on an index list (I)?\n"
+    "How to accumulate elements of a vector (X) to an array (F) based on an index list (I)?\n"
    ]
   },
   {
@@ -2336,7 +2336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Considering a four dimensions array, how to get sum over the last two axis at once?\n"
+    "Considering a four dimensions array, how to get sum over the last two axis at once?\n"
    ]
   },
   {
@@ -2360,7 +2360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Create a function to produce a sliding window view of a 1D array\n"
+    "Create a function to produce a sliding window view of a 1D array.\n"
    ]
   },
   {
