--- a/_notebooks/2020-06-20-guide-to-numpy.ipynb
+++ b/_notebooks/2020-06-20-guide-to-numpy.ipynb
@@ -18,13 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This post assumes that you have the necessary skills to work with Python. If you are new to Python, I would highly encourage you to go through [Google’s Python Class](https://developers.google.com/edu/python) first. It’s an excellent place for beginners and also offers exercises to get your hands dirty.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This post assumes that you have the necessary skills to work with Python. If you are new to Python, I would highly encourage you to go through [Google’s Python Class](https://developers.google.com/edu/python) first. It’s an excellent place for beginners and also offers exercises to get your hands dirty.\n",
+    "\n",
     "Python is a great general-purpose programming language, but it becomes really convenient and powerful for Machine Learning and Data Science with a few popular libraries. The libraries provide efficient code optimization and memory management, along with some additional features and functionalities.\n"
    ]
   },
@@ -32,29 +27,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jupyter notebooks are used for demonstrating the code examples. It is an interactive notebook that lets you run live code, equations, visualizations, and text. You can learn about this at [jupyter.org](https://jupyter.org/)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Introduction\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Introduction\n",
+    "\n",
     "Although all the computations can be done by Python on its own stand-alone, these libraries provide a much efficient way of doing the computations.\n",
     "\n",
-    "Let’s go through an example to understand the importance of these libraries.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Let’s go through an example to understand the importance of these libraries.\n",
+    "\n",
     "Create a list of numbers from 1 to 5 and multiply the elements by 2:\n"
    ]
   },
@@ -214,29 +192,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NumPy\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## NumPy\n",
+    "\n",
     "[Numpy](http://www.numpy.org/) is the core library for doing scientific computing in Python involves working the multidimensional arrays. Many libraries are built on top of NumPy.\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### Basics\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Basics\n",
+    "\n",
     "A NumPy array is a grid of values, all of the same type. Nested python lists can be used to initialize the array. You can access elements with square brackets for the 1D array, but for the 2D array, it’s a little different.\n"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -536,13 +504,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slicing\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Slicing\n",
+    "\n",
     "Although slicing is similar to Python lists, there’s a slight difference for multi-dimensional arrays. We need to `specify the slice for each dimension` of the array.\n",
     "\n",
     "Let’s walk through some examples to get a better understanding:\n"
@@ -750,13 +713,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Functions and Aggregations\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Functions and Aggregations\n",
+    "\n",
     "Numpy comes with a lot of built-in functions, which are useful for performing various computations efficiently. One can perform arithmetic, matrix, trigonometric, exponent, logarithm operations, and many more.\n",
     "\n",
     "Let's go through a few of these operations:\n"
@@ -1156,7 +1114,6 @@
     "We can find the `sum`, `min`, and `max` row-wise or col-wise by specifying the `axis` argument.\n",
     "\n",
     "- `axis = 0` specifies we are reducing rows that means we are finding row-wise\n",
-    "\n",
     "- `axis = 1` specifies we are reducing cols that means we are finding col-wise\n"
    ]
   },
@@ -1283,13 +1240,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Broadcasting\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Broadcasting\n",
+    "\n",
     "Broadcasting is a way that allows us to work with NumPy arrays of different shapes when performing arithmetic operations.\n",
     "\n",
     "**Rules of Broadcasting:**\n",
@@ -1497,13 +1449,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fancy Indexing\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Fancy Indexing\n",
+    "\n",
     "Fancy indexing is simply accessing multiple elements of an array at once through the use of an array of indices. It's slicing in simple ways.\n",
     "\n",
     "Let's walk through a few examples to understand the above:\n"
@@ -1711,13 +1658,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strides\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Strides\n",
+    "\n",
     "Computer Memory is a single tape where we need to travel sequentially in order to access the data. Strides specify the number of bytes we need to travel in the memory to access the adjacent element along each dimension.  Numpy arrays are stored in a contiguous block of memory, so strides become really handy. Strides are multiples of 8 and by default row-major.\n"
    ]
   },
@@ -2124,13 +2066,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`strides: (8, 0, 0)` indicates that the virtual array consists of every element of array b, which appears as a 2D array of shape (3, 2)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "`strides: (8, 0, 0)` indicates that the virtual array consists of every element of array b, which appears as a 2D array of shape (3, 2)\n",
+    "\n",
     "How can we manipulate the strides and shape of an array to produce a virtual array that is much bigger but using the same memory?\n"
    ]
   },
@@ -2181,13 +2118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Exercises\n",
+    "\n",
     "Create a 2D array with 1 on the border and 0 inside.\n"
    ]
   },
@@ -2389,13 +2321,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Future Resources\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Future Resources\n",
+    "\n",
     "So far, we’ve covered many of the basics of using NumPy for performing scientific computing. But there’s still a lot of material that you can learn from. To learn more about Numpy, I would definitely recommend the following:\n",
     "\n",
     "- [Pandas Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/index.html) covers much more about Numpy. But it also has other libraries such as Pandas, Matplotlib very well explained with code walkthrough.\n",
@@ -2408,13 +2335,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## References\n",
+    "\n",
     "- [Numpy](https://numpy.org/doc/stable/index.html)\n",
     "- [Introduction to Numerical Computing with NumPy - SciPy 2019](https://www.youtube.com/watch?v=ZB7BZMhfPgk)\n",
     "- [Advanced NumPy - SciPy 2019](https://www.youtube.com/watch?v=cYugp9IN1-Q)\n",
@@ -2439,7 +2361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
