--- a/_notebooks/2020-12-02-kaggle-melanoma-challenge.ipynb
+++ b/_notebooks/2020-12-02-kaggle-melanoma-challenge.ipynb
@@ -6,7 +6,7 @@
     "id": "4TeLv_Qhnlmz"
    },
    "source": [
-    "# Getting Started with Kaggle Competitions: Melanoma Classification Challenge\n",
+    "# \"Getting Started with Kaggle Competitions: Melanoma Classification Challenge\"\n",
     "> This blog walks through a gentle introduction for beginners on getting started with Kaggle competitions.\n",
     "\n",
     "- toc: true\n",
@@ -23,9 +23,7 @@
    },
    "source": [
     "<hr />\n",
-    "\n",
     "This blog is jointly co-authored by [Pranjal Chitale](https://github.com/PranjalChitale). We both participated in the competition as a team.\n",
-    "\n",
     "<hr />\n",
     "\n",
     "This post assumes that you are acquainted with the basic skills of working with [PyTorch](https://pytorch.org/). If you are new to PyTorch, we would highly encourage you to go through [Deep Leaning With PyTorch: A 60 Minute Blitz by PyTorch](https://pytorch.org/tutorials/beginner/deep_learning_60min_blitz.html). It’s a great place for beginners to get your hands dirty.\n"
