fix table in blog

--- a/_notebooks/2020-12-02-kaggle-melanoma-challenge.ipynb
+++ b/_notebooks/2020-12-02-kaggle-melanoma-challenge.ipynb
@@ -1272,7 +1272,7 @@
     "|-------------------------------------|----------|------------|\n",
     "| SEResNeXt50_32x4d                   | 0.8934   | 0.8762     |\n",
     "| EfficientNet B2                     | 0.8972   | 0.8921     |\n",
-    "| SEResNeXt50_32x4d + EfficientNet B2 | 0.9019   |            |\n",
+    "| SEResNeXt50_32x4d + EfficientNet B2 | 0.9019   |   -        |\n",
     "\n",
     "In the 3rd case, we average out the predictions of both the models and assess the performance.\n"
    ]
